...
      }}
    >
      <Tab.Screen
        name="HomeTab"
        component={HomeStack}
        options={{
          title: 'Home',
          tabBarIcon: ({ color }) => (
            <SimpleTabIcon name="home-outline" color={color} />
          ),
        }}
      />
      <Tab.Screen
...
